[package]
name = "orbit-sim"
version = "0.1.0"
authors = ["HMPerson1 <hmperson1@gmail.com>"]

[dependencies]
cairo-rs = "*"
lazy_static = "*"
tau = "*"
nalgebra = "*"
typenum = "*"
generic-array = "0.2"
num-traits = "*"
rand = "*"
bitflags = "*"

[dependencies.gtk]
version = "0.1.1"
features = ["v3_22"]
